2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/cpio.c (grub_cpio_find_file): Handle prefix.
	(handle_symlink): Fix off-by-one error.
	Canonicalize the target.
	(grub_cpio_dir): Canonicalize the name.
	Fix memory leak.
	Set directory.
	(grub_cpio_open): Canonicalize the name.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/iso9660.c (grub_iso9660_iterate_dir): Fix symlink
	handling.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/fs/ufs.c (grub_ufs_find_file): Fix handling of double slash.
	* grub-core/fs/minix.c (grub_minix_find_file): Likewise.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-menulst2cfg.c (main): Check return value of fwrite.
	* util/grub-mklayout.c (write_file): Likewise. New argument fname.
	All users updated.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub.d/20_linux_xen.in: Update initrd list based on 10_linux.in
	counterpart.

2012-05-10  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix UFS1 big file support.

	* grub-core/fs/ufs.c (INODE): Removed.
	(INODE_SIZE): Always use 64-bit byte-swap since size field is always
	64-bit.
	(INODE_MODE): Simplify.
	(grub_ufs_inode): Use uint64_t for size and not int64_t.
	(grub_ufs_lookup_symlink): Don't use INODE.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix minixfs with non-power-of-two blocks since it's supported by minix.

	* grub-core/fs/minix.c (GRUB_MINIX_ZONESZ): Use block_size.
	(grub_minix_data): Replace log_block_size with block_size.
	(grub_minix_read_file): Use block_size but avoid 64-bit division.
	(grub_minix_mount): Fill block_size.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Bump to beta5.

2012-05-09  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix wrapped HFS+ handling.

	* grub-core/fs/fshelp.c (grub_fshelp_read_file): New argument
	blocks_start. All users updated.
	* grub-core/fs/hfsplus.c (grub_hfsplus_read_block): Don't add